--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,15 @@
-<footer>
+<footer class="footer">
             <div class="row">
-                <div class="col-lg-12 footer">
-               &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
-{% if page.last_updated %}<p>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }} <br />
-<p><img src="{{site.footer_image_location}}"/></p>
+                <div class="col-lg-5"></div>
+                <div class="col-lg-3">
+                    <img class="logo-footer" src="{{site.footer_image_location}}"/>
+                </div>
+                <div class="col-lg-4">
+                    &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
+                    {% if page.last_updated %}
+                        Page last updated: {{page.last_updated}}<br/>
+                    {% endif %}
+                    Site last generated: {{ site.time | date: "%b %-d, %Y"  }}
                 </div>
             </div>
 </footer>
