--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -19,5 +19,5 @@ $('#toc').on('click', 'a', function() {
 </script>
 
 {% unless page.toc == false %}
-<div id="toc"></div>
+<div id="toc" class="nav-page"></div>
 {% endunless %}
