--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,7 @@
 
         {% include custom/conditions.html %}
 
-        <ul id="mysidebar" class="nav">
+        <ul id="mysidebar" class="nav nav-sidebar">
 
             <span class="siteTagline">{{site.sidebar_tagline}}</span>
             <span class="versionTagline">{{site.sidebar_version}}</span>
