--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -2,18 +2,23 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container topnavlinks">
         <div class="navbar-header">
+            <a class="fa fa-lg navbar-brand" href="home.html">
+                <div class="projectTitle">
+                    <div class="logo-vizydrop-wrap">
+                        <div class="logo-vizydrop"></div>
+                    </div>
+                    {{site.topnav_title}}
+                </div>
+            </a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-
-            <a class="fa fa-lg navbar-brand" href="home.html"><div class="projectTitle"><div class="logo-vizydrop"></div> {{site.topnav_title}}</div></a>
-
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right navbar-header">
+            <ul class="nav navbar-nav navbar-right navbar-header-right">
                 <!-- entries without drop-downs appear here -->
                 <!-- conditional logic to control which topnav appears for the audience defined in the configuration file.-->
                 {% include custom/conditions.html %}
