--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,12 +1,12 @@
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container topnavlinks">
+        <div class="logo-vizydrop-wrap">
+            <div class="logo-vizydrop"></div>
+        </div>
         <div class="navbar-header">
             <a class="fa fa-lg navbar-brand" href="home.html">
                 <div class="projectTitle">
-                    <div class="logo-vizydrop-wrap">
-                        <div class="logo-vizydrop"></div>
-                    </div>
                     {{site.topnav_title}}
                 </div>
             </a>
@@ -78,9 +78,9 @@
                 <!--uncomment this block if you want simple search instead of algolia-->
                 <li>
                      <!--start search-->
-                    <div id="search-demo-container">
+                    <div id="search-demo-container" class="search-results-container">
                         <input type="text" id="search-input" placeholder="{{site.data.strings.search_placeholder_text}}">
-                        <ul id="results-container"></ul>
+                        <ul id="results-container" class="search-results-list"></ul>
                     </div>
                     <script src="../js/jekyll-search.js" type="text/javascript"></script>
                     <script type="text/javascript">
@@ -88,8 +88,8 @@
                             searchInput: document.getElementById('search-input'),
                             resultsContainer: document.getElementById('results-container'),
                             dataSource: '../search.json',
-                            searchResultTemplate: '<li><a href="{url}" title="{{page.title | replace: "'", "\"}}">{title}</a></li>',
-                        noResultsText: '{{site.data.strings.search_no_results_text}}',
+                            searchResultTemplate: '<li class="search-results-list__item"><a href="{url}" title="{{page.title | replace: "'", "\"}}">{title}</a></li>',
+                        noResultsText: '<li class="search-results-list__item">{{site.data.strings.search_no_results_text}}</li>',
                                 limit: 10,
                                 fuzzy: true,
                         })
